--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vuepress build src --clean-cache --clean-temp",
     "dev": "vuepress dev src",
     "dev-clean": "vuepress dev src --clean-cache --clean-temp",
-    "preview": "http-server .vuepress/dist",
+    "preview": "http-server .vuepress/docs",
     "vp-update": "pnpm dlx vp-update",
     "gen:font": "tsx ./scripts/web-fonts.ts"
   },
@@ -21,9 +21,9 @@
     "tsconfig-vuepress": "^7.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vue": "^3.5.24",
+    "vue": "^3.5.27",
     "vuepress": "2.0.0-rc.26",
-    "vuepress-theme-plume": "1.0.0-rc.176"
+    "vuepress-theme-plume": "1.0.0-rc.187"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
